--- a/style.css
+++ b/style.css
@@ -10,15 +10,15 @@ body {
 
 .login-container {
     background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    padding: 50px;
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(155, 155, 155, 0.1);
+    width: 500px;
 }
 
 h2 {
     text-align: center;
-    color: #333;
+    color: #000000;
 }
 
 .input-group {
@@ -33,20 +33,20 @@ h2 {
 .input-group input {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
+    border: 2px solid #ddd;
+    border-radius: 20px;
 }
 
 button {
     width: 100%;
     padding: 10px;
-    background-color: #5c6bc0;
+    background-color: #0307fd;
     color: white;
     border: none;
-    border-radius: 4px;
+    border-radius: 20px;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #3f51b5;
+    background-color: #0307fd;
 }
